# blackholio-python-client

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  CALLBACK_REGISTRATION_ISSUE_ANALYSIS.md  CHANGELOG.md  CLIENT_SIDE_FIXES_IMPLEMENTATION_SUMMARY.md  COMPLETE_FIX_SUMMARY_FOR_AGENT.md  CRITICAL_EVENT_NAME_COMPATIBILITY_FIX.md  CRITICAL_FIX_COMPLETE.md  CRITICAL_ISSUES_RESOLVED.md  DATABASE_PARAMETER_FIX_COMPLETED.md  DEVELOPMENT.md  Dockerfile  FINAL_INTEGRATION_TEST_REPORT.md  FOR_SPACETIMEDB_SDK_NO_CHANGES_NEEDED.md  JWT_AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  ML_TRAINING_CONNECTION_ISSUE_SUMMARY.md  ML_TRAINING_FIX_SUMMARY.md  Makefile  README.md  SDK_MIGRATION_REPORT.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  SERVER_LANGUAGE_TEST_RESULTS.md  SPACETIMEDB_PROTOCOL_FIX_COMPLETED.md  SPACETIMEDB_SDK_REMAINING_FIXES.md  SUBSCRIPTION_CALLBACK_FIX_SUMMARY.md  SUBSCRIPTION_DATA_FLOW_FIX_SUMMARY.md  SUBSCRIPTION_DATA_FLOW_INTEGRATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  TEST_VALIDATION_REPORT.md  bandit_report.json  cicd-validation-report.json  debug_client_query_issue.py  debug_connection_paths.py  debug_empty_tables.py  debug_subscription.py  (+50 more)
.github/workflows/: ci.yml  config.yml  daily-health-check.yml  dependency-update.yml  dev.yml  release.yml
docs/: API_REFERENCE.md  CI_CD_PIPELINE.md  DOCKER_DEPLOYMENT.md  INSTALLATION.md  LOAD_TEST_REPORT.md  MIGRATION_BLACKHOLIO_AGENT.md  MIGRATION_CLIENT_PYGAME.md  MIGRATION_SCRIPTS.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md
logs/jwt_test/tensorboard/blackholio_1750623368/: events.out.tfevents.1750623368.m4max2025.local.97970.0
proompts/: initial-prompt.md  tasks.yaml
proompts/docs/: architecture-decisions.md  codebase-analysis.md
proompts/tasks/: execute-next-task.md
scripts/: batch_migrate.py  migrate_blackholio_agent.py  migrate_client_pygame.py  migrate_project.py  release.sh  test_migration_scripts.py  validate-cicd-setup.py  validate_version_management.py  version_manager.py
src/blackholio_client/: __init__.py  client.py
src/blackholio_client/auth/: __init__.py  auth_client.py  identity_manager.py  token_manager.py
src/blackholio_client/config/: __init__.py  environment.py  server_profiles.py
src/blackholio_client/connection/: __init__.py  connection_manager.py  enhanced_connection_manager.py  modernized_spacetimedb_client.py  protocol_handlers.py  server_config.py  spacetimedb_connection.py
src/blackholio_client/events/: __init__.py  base.py  connection_events.py  enhanced_events.py  game_events.py  handlers.py  manager.py  publisher.py  subscriber.py  utils.py
src/blackholio_client/examples/: __init__.py  advanced_usage_examples.py  basic_usage.py  data_models_examples.py  environment_config_examples.py  event_system_examples.py  migration_examples.py
src/blackholio_client/exceptions/: __init__.py  connection_errors.py
src/blackholio_client/factory/: __init__.py  base.py  client_factory.py  csharp_factory.py  go_factory.py  python_factory.py  registry.py  rust_factory.py
src/blackholio_client/integration/: __init__.py  client_generator.py  client_loader.py  server_manager.py
src/blackholio_client/interfaces/: __init__.py  auth_interface.py  connection_interface.py  game_client_interface.py  reducer_interface.py  subscription_interface.py
src/blackholio_client/models/: __init__.py  data_converters.py  data_pipeline.py  game_entities.py  game_statistics.py  physics.py  protocol_adapters.py  schemas.py  serialization.py
src/blackholio_client/reducers/: __init__.py  action_formatter.py  game_reducers.py  reducer_client.py
src/blackholio_client/utils/: __init__.py  async_helpers.py  data_converters.py  debugging.py  error_handling.py  logging_config.py  validation.py
tests/: __init__.py  benchmarks.py  conftest.py  final_integration_test.py  load_testing.py  performance_config.json  performance_runner.py  test_comprehensive_coverage.py  test_connection_manager.py  test_core_modules.py  test_data_models.py  test_docker_validation.py  test_error_handling.py  test_events_basic.py  test_factory.py  test_load_stress.py  test_performance.py  test_security_validation.py  test_spacetimedb_integration.py  test_utils_focused.py
tests/integration/: __init__.py  conftest.py  test_protocol_adapters.py  test_runner.py  test_server_integration.py  test_setup_validation.py
tests/performance_results/: performance_benchmarks_20250619_195228.json  performance_benchmarks_20250619_195430.json  performance_benchmarks_20250619_195435.json  performance_benchmarks_20250619_195514.json  performance_benchmarks_20250619_195650.json  performance_benchmarks_20250619_195717.json
